megaphone fix in career section;

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -284,7 +284,7 @@
 
   &__illustration {
     float: right;
-    margin: 20px -110px 0 20px;
+    margin: 20px -80px 0 20px;
   }
 
   &__title {
